[project]
name = "agent-tmux-hub"
version = "0.1.0"
description = "A tmux-based approval and observation hub for multiple agent CLIs"
requires-python = ">=3.11"

[project.scripts]
agent-tmux-hub = "agent_tmux_hub.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
